# makeqr

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  readme.md  requirements.txt  setup.py  wifi_qrcode.py
.github/workflows/: build.yml  lint.yml  pypi.yml  tests.yml
makeqr/: __init__.py  __main__.py  app.py  base.py  cli_app.py  constants.py  enums.py  makeqr.py  makers.py  models.py  typing.py  utils.py
makeqr/cli_app/: __init__.py  app.py  constants.py  factory.py  field_extra.py  main.py  utils.py
makeqr/cli_app/handlers/: geo.py
makeqr/models/: __init__.py  base.py  geo.py  link.py  mailto.py  sms.py  tel.py  text.py  wifi.py
tests/: test_cli.py  test_geo.py  test_link.py  test_tel.py
tests/qr_data/: test_geo.py  test_link.py  test_mailto.py  test_sms.py  test_tel.py  test_wifi.py
wifi_qrcode/: __init__.py  __main__.py  app.py  makers.py  utils.py
