[tool.poetry]
name = "makeqr"
version = "3.0.0"
description = "Generate QR cards for any occasion"
authors = ["Aleksandr Shpak <shpaker@gmail.com>"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: Communications',
]
homepage = "https://github.com/shpaker/makeqr"
repository = "https://github.com/shpaker/makeqr"

[tool.poetry.dependencies]
python = "^3.7"
qrcode = {extras = ["pil"], version = "^7.1"}
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pylint = "^2.9.3"
mypy = "^0.910"
isort = "^5.9.2"
black = "^21.6b0"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
makeqr = 'makeqr.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
verbose = 1
color = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["makeqr", "test"]
skip = [".mypy_cache", ".pytest_cache", "venv"]

[tool.pylint.messages_control]
disable = "missing-docstring,logging-fstring-interpolation,too-few-public-methods,too-many-arguments,duplicate-code"
extend-ignore = "E203,W503"

[tool.pylint.format]
max-line-length = "88"
indent-string = "    "
good-names = "i, x, y, T, cc, bcc, to"

[tool.pylint.master]
ignore = "venv,tests"
indent-string = "    "
extension-pkg-whitelist = "pydantic"
