[tool.poetry]
name = "makeqr"
version = "4.0.0rc1"
description = "Generate QR cards for any occasion"
authors = ["Aleksandr Shpak <shpaker@gmail.com>"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: Communications',
]
readme = "readme.md"
homepage = "https://github.com/shpaker/makeqr"
repository = "https://github.com/shpaker/makeqr"

[tool.poetry.dependencies]
python = "^3.7.2"
qrcode = {extras = ["pil"], version = "^7.3.1"}
typer = "^0.6.1"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
mypy = "^0.982"
isort = "^5.9.2"
black = "^22.10.0"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
makeqr = 'makeqr.cli_app.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
verbose = 1
color = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["makeqr", "test"]
skip = [".mypy_cache", ".pytest_cache", "venv"]

[tool.pylint.messages_control]
disable = "missing-docstring,logging-fstring-interpolation,too-few-public-methods,too-many-arguments,duplicate-code"
extend-ignore = "E203,W503"

[tool.pylint.format]
max-line-length = "79"
indent-string = "    "
good-names = "i, x, y, T, cc, bcc, to"

[tool.pylint.master]
ignore = "venv,tests"
indent-string = "    "
extension-pkg-whitelist = "pydantic"
